2006-07-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp.vcproj: Updated source and header file lists in the
	project.

	* win32/Makefile.am, Makefile.am, configure.ac: Added and updated
	Makefiles and configuration script (merged rev. 539:541 from
	itpp-3-10 branch).

	* itpp.sln, itpp.vcproj: Moved MSVC++ .NET project files into
	win32 subdirectory. Removed project files for MSVC++ 2003 .NET
	(merged	rev. 539:541 from itpp-3-10 branch).

	* itpp/base/itassert.cpp: Conversion from integer to std::string
	implemented in pure C++ by using std::stringstream class (merged
	rev. 536:538 from itpp-3-10 branch).

	* itpp/base/itfile.h: Fixed a minor problem with overloaded virtual
	function open() (merged	rev. 536:538 from itpp-3-10 branch).

	* itpp/comm/modulator_nd.cpp, itpp/comm/modulator.h,
	itpp/base/newton_search.cpp: Minor cleanup fixes of warnings
	detected under MSVC++ .NET compiler.

2006-07-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/newton_search.cpp: Logical variables initialised with
	`true or `false' instead of inteager numbers.

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h: Fixed a minor
	problem with duplicated declaration of tgamma(), lgamma() and
	cbrt() functions.

2006-07-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/Makefile.am: Fixed a bug that caused multiple definition
	errors during linking the IT++ debugging library. 

	* configure.ac: Fixed a minor problem with using AC_DISABLE_SHARED
	macro for Windows environments. 

	* **/*.{h,cpp}: Copyright date updated to `1995-2006'.

	* configure.ac: Version numbers and Copyright date updated.

==============================================================================

2006-07-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.3 released (SVN tag: release-3-10-3)

	* NEWS: Updated to reflect recent fixes.

	* configure.ac: Increased itpp-external version number to 2.3.0.

2006-07-04  Adam Piatyszek  <ediap@users.sourceforge.net>
